Add "for JVM" qualifier to website

--- a/website/index.html
+++ b/website/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>RxBroadcast: A small distributed event library</title>
+        <title>RxBroadcast: A small distributed event library for the JVM</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="/css/index.css">
     </head>
@@ -11,7 +11,7 @@
             <div class="txt--center">
                 <h1 class="h2">
                     <code>RxBroadcast</code><br>
-                    <small class="tagline">A small distributed event library</small>
+                    <small class="tagline">A small distributed event library for the JVM</small>
                 </h1>
                 <nav class="nav">
                     <a href="https://github.com/RxBroadcast" class="btn">GitHub</a>
