Reformat link tags in header

--- a/website/index.html
+++ b/website/index.html
@@ -4,7 +4,12 @@
         <meta charset="utf-8">
         <title>RxBroadcast: A small event library for the JVM</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="/css/index.css">
+        <link rel="stylesheet"
+              href="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.7.1/katex.min.css"
+              integrity="sha384-wITovz90syo1dJWVh32uuETPVEtGigN07tkttEqPv+uR2SE/mbQcG7ATL28aI9H0"
+              crossorigin="anonymous">
+        <link rel="stylesheet"
+              href="/css/index.css">
     </head>
     <body>
         <header class="header">
