Add "What is RxBroadcast?" section to website

--- a/website/index.html
+++ b/website/index.html
@@ -24,5 +24,28 @@
                 </nav>
             </div>
         </header>
+        <div class="bg--off-white py2">
+            <section class="measure p2" id="what-is">
+                <h3>What is RxBroadcast?</h3>
+                <p class="h4">
+                    RxBroadcast is a small event library for the JVM—it provides a set classes that can be used to
+                    build systems in <a href="https://en.wikipedia.org/wiki/Event-driven_architecture">an event-driven
+                    style</a>. It strives to provide a small API that provides the fundamental
+                    operations needed to send and receive events on a single machine and across multiple machines
+                    connected via the Internet (that is, using
+                    <a href="https://en.wikipedia.org/wiki/Transmission_Control_Protocol">TCP</a><sup>*</sup> or
+                    <a href="https://en.wikipedia.org/wiki/User_Datagram_Protocol">UDP</a><sup>†</sup>) and is built
+                    atop <a href="http://reactivex.io">Reactive Extensions</a>
+                    (<a href="https://github.com/ReactiveX/RxJava">RxJava</a>), which provides a proven implementation
+                    of observable sequences.
+                </p>
+                <aside>
+                    <p>
+                        <sup>*</sup><a href="https://github.com/RxBroadcast/RxBroadcast/issues/83">Not yet implemented</a><br>
+                        <sup>†</sup>Using <a href="https://en.wikipedia.org/wiki/Multicast">multicast addressing</a>
+                    </p>
+                </aside>
+            </section>
+        </div>
     </body>
 </html>
