--- a/website/index.html
+++ b/website/index.html
@@ -30,13 +30,13 @@
                 <p class="h4">
                     RxBroadcast is a small event library for the JVM—it provides a set classes that can be used to
                     build systems in <a href="https://en.wikipedia.org/wiki/Event-driven_architecture">an event-driven
-                    style</a>. It strives to provide a small API that provides the fundamental
-                    operations needed to send and receive events on a single machine and across multiple machines
-                    connected via the Internet (that is, using
+                    style</a>. It strives to have a small API with the fundamental operations needed to send and
+                    receive events both on a single machine and across multiple machines connected via the Internet
+                    (that is, using
                     <a href="https://en.wikipedia.org/wiki/Transmission_Control_Protocol">TCP</a><sup>*</sup> or
                     <a href="https://en.wikipedia.org/wiki/User_Datagram_Protocol">UDP</a><sup>†</sup>) and is built
                     atop <a href="http://reactivex.io">Reactive Extensions</a>
-                    (<a href="https://github.com/ReactiveX/RxJava">RxJava</a>), which provides a proven implementation
+                    (<a href="https://github.com/ReactiveX/RxJava">RxJava</a>), which offers a proven implementation
                     of observable sequences.
                 </p>
                 <aside>
