Fix typo in copy
Fixes #3

--- a/website/index.html
+++ b/website/index.html
@@ -28,7 +28,7 @@
             <section class="measure p2" id="what-is">
                 <h3>What is RxBroadcast?</h3>
                 <p class="h4">
-                    RxBroadcast is a small event library for the JVM—it provides a set classes that can be used to
+                    RxBroadcast is a small event library for the JVM—it provides a set of classes that can be used to
                     build systems in <a href="https://en.wikipedia.org/wiki/Event-driven_architecture">an event-driven
                     style</a>. It strives to have a small API with the fundamental operations needed to send and
                     receive events both on a single machine and across multiple machines connected via the Internet
